# rsomics-fasta-subseq

./: Cargo.toml  README.md
benches/: bench.rs
src/: cli.rs  lib.rs
tests/: compat.rs
tests/golden/: clamp.fa  first5_coord.fa  inner.fa  last5.fa  last5_coord.fa  negclamp.fa  nowrap.fa  tab_coord.fa  tab_header.fa  tab_plain.fa  test.fa.seqkit.fai
