[package]
name = "rsomics-fasta-subseq"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Extract FASTA subsequences by 1-based region — seqkit subseq port"

[[bin]]
name = "rsomics-fasta-subseq"
path = "src/main.rs"

[lib]
name = "rsomics_fasta_subseq"
path = "src/lib.rs"

[dependencies]
rsomics-common = { version = "0.6" }
rsomics-help = { version = "0.3" }
clap = { version = "4", features = ["derive"] }
needletail = "0.6"

