[package]
name = "rsomics-fasta-subseq"
version = "0.1.2"
edition = "2024"
rust-version = "1.91"
license = "MIT OR Apache-2.0"
repository = "https://github.com/omics-rust/rsomics-world"
authors = ["Zane Leong <efd@live.com>"]
description = "Extract FASTA subsequences by 1-based region — seqkit subseq port"

[[bin]]
name = "rsomics-fasta-subseq"
path = "src/main.rs"

[lib]
name = "rsomics_fasta_subseq"
path = "src/lib.rs"

doctest = false
[dependencies]
rsomics-common = { version = "0.6" }
rsomics-help = { version = "0.3" }
clap = { version = "4", features = ["derive"] }
needletail = "0.6"

[dev-dependencies]
criterion = { version = "0.7", default-features = false, features = ["cargo_bench_support"] }
[[bench]]
name = "bench"
harness = false
